--- a/Style.css
+++ b/Style.css
@@ -1,5 +1,8 @@
 body {
 	margin: 0;
+
+font-family: "Gill Sans", sans-serif;
+
 }
 
 
@@ -12,7 +15,6 @@ img{
 }
 
 h1{
-	font-family: arial;
 }
 
 label{
@@ -27,13 +29,6 @@ input{
     outline: none;
     border-radius: 3px;
     border:1px solid #d4d4d4;
-}
-
-input:hover{
-    width: 70%;
-    background-color: #fff;
-    padding: 2px;
-    outline: none;
 }
 
 button{
