--- a/Style.css
+++ b/Style.css
@@ -32,7 +32,7 @@ input{
 }
 
 button{
-    background-color: orange;
+    background-color: #eb8634;
     color: white;
     padding: 7px;
     width: 30%;
